src/objects/Credit_Bureau_Line_Item__c.object
<CustomObject>
    <description>This object pertains to the particulars required in the applicants CBR to perform the credit analysis of the applicant. This object is also the child object against the custom object &quot;Credit Bureau&quot;</description>
    <fields>
        <fullName>Account_Balance__c</fullName>
        <description>Account Balance of collection and Account Balance for tradelines</description>
        <label>Account Balance</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Account_Condition_Code__c</fullName>
        <label>Account Condition Code</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Account_Condition__c</fullName>
        <description>This field pertains to account condition of Tradelines Creditors account, if any found on the applicants CBR</description>
        <inlineHelpText>Tradelines-Account Condition (e.g. Open, Closed)</inlineHelpText>
        <label>Account Condition</label>
        <length>120</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Account_Number__c</fullName>
        <description>This field pertains to creditor account number for collection, if any found on the applicants CBR</description>
        <inlineHelpText>Account# (e.g. 4409844)</inlineHelpText>
        <label>Account Number</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Account_Type__c</fullName>
        <description>This field pertains applicants Tradeline&apos;s creditor&apos;s type, If any found on the applicants CBR</description>
        <inlineHelpText>Tradelines- Creditor Type (e.g. Bank, Auto, Retail, Card)</inlineHelpText>
        <label>Account Type</label>
        <picklist>
            <picklistValues>
                <fullName>Bank</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Retail</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Bank Credit Card</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Credit Card</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Loan Finance</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Sales Finance</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Credit Union</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Savings &amp; Loan</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Service &amp; Professional</fullName>
            </picklistValues>
            <restrictedPicklist>true</restrictedPicklist>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Amount_Past_Due__c</fullName>
        <description>Integration field used to pull and load CBR</description>
        <label>Amount Past Due</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Balance_Date__c</fullName>
        <description>This field pertains to the last balance date under collections and tradelines , If any found on the applicants CBR</description>
        <inlineHelpText>Collections/Tradelines -Balance Date ( 01/31/2000)</inlineHelpText>
        <label>Balance Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Credit_Bureau_Line_Item_Type__c</fullName>
        <label>Credit Bureau Line Item Type</label>
        <picklist>
            <picklistValues>
                <fullName>Collection</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Public Record</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Score Factor</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Trade Line</fullName>
            </picklistValues>
            <restrictedPicklist>true</restrictedPicklist>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Credit_Bureau__c</fullName>
        <label>Credit Bureau</label>
        <referenceTo>Credit_Bureau__c</referenceTo>
        <relationshipLabel>Credit Bureau Line Items</relationshipLabel>
        <relationshipName>Credit_Bureau_Line_Items</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Credit_Limit__c</fullName>
        <description>This field pertains applicant&apos;s Tradelines credit limit against the creditor, If any found on the applicants CBR</description>
        <inlineHelpText>Tradelines-Credit Limit (e.g. $5,649.00)</inlineHelpText>
        <label>Credit Limit</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Creditor_Name__c</fullName>
        <description>This field pertains to name of the creditor, if any found on the applicants CBR</description>
        <inlineHelpText>Creditor Name (e.g. Bank of America)</inlineHelpText>
        <label>Creditor Name</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Creditor_Type__c</fullName>
        <label>Creditor_Type</label>
        <picklist>
            <picklistValues>
                <fullName>I</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>R</fullName>
            </picklistValues>
            <restrictedPicklist>true</restrictedPicklist>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Currency__c</fullName>
        <description>Integration field used to pull and load CBR</description>
        <label>Currency</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>ECOA__c</fullName>
        <description>Integration field used to pull and load CBR</description>
        <label>ECOA</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>High_Balance__c</fullName>
        <label>High_Balance</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>History_Date__c</fullName>
        <description>This field pertains to the date of history for the creditors account, If any found on the applicants CBR</description>
        <inlineHelpText>Collections- History Date ( 01/31/2000)</inlineHelpText>
        <label>History Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Is_Duplicate__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Is Duplicate</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Is_Mortgage__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Integration field used to pull and load CBR</description>
        <label>Is Mortgage</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Kind_of_Business__c</fullName>
        <description>Integration field used to pull and load CBR</description>
        <label>Kind of Business</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Last_Activity__c</fullName>
        <description>This field pertains to the date of last activity done on the collection record , If any found on the applicants CBR</description>
        <inlineHelpText>Collections-Last Activity Date ( 01/31/1990)</inlineHelpText>
        <label>Last Activity</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Monthly_Payments__c</fullName>
        <label>Monthly Payment</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Open_Date__c</fullName>
        <description>This field pertains to the date the credit was opened, If any found on the applicants CBR</description>
        <inlineHelpText>Collections-Open Date ( 01/31/1980)</inlineHelpText>
        <label>Open Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Open_Or_Closed__c</fullName>
        <label>Open_Or_Closed</label>
        <picklist>
            <picklistValues>
                <fullName>Closed</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Open</fullName>
            </picklistValues>
            <restrictedPicklist>true</restrictedPicklist>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Payment_Status_Code__c</fullName>
        <label>Payment Status Code</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Payment_Status__c</fullName>
        <description>This field pertains to status of the payment made against the creditors, if any found on the applicants CBR</description>
        <inlineHelpText>Tradelines-Payment Status (30 2 TIMES, CURR ACCT)</inlineHelpText>
        <label>Payment Status</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Public_Record_Amount__c</fullName>
        <description>This field pertains to any amount  against the  public record type, If any found on the applicants CBR</description>
        <inlineHelpText>Public Record Type Amount ( $1000.00)</inlineHelpText>
        <label>Public Record Amount</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Public_Record_Filed_Date__c</fullName>
        <description>This field pertains to the Date  the public record was filed, If any found on the applicants CBR</description>
        <inlineHelpText>Public Record-Date Filed ( 01/31/2000)</inlineHelpText>
        <label>Public Record Filed Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Public_Record_Satisified_Date__c</fullName>
        <description>This field pertains to the Date the public record was satisfied, If any found on the applicants CBR</description>
        <inlineHelpText>Public Record-Date Satisfied ( 01/31/2050)</inlineHelpText>
        <label>Public Record Satisified Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Public_Record_Status__c</fullName>
        <label>Public Record Status</label>
        <picklist>
            <picklistValues>
                <fullName>Filed</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Satisfied</fullName>
            </picklistValues>
            <restrictedPicklist>true</restrictedPicklist>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Public_Record_Type__c</fullName>
        <description>This field pertains to any type of public record If any found on the applicants CBR</description>
        <inlineHelpText>Public Record (e.g. Bankruptcy, Judgments, Liens)</inlineHelpText>
        <label>Public Record Type</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Purpose_Of_Account_Code__c</fullName>
        <label>Purpose Of Account Code</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Purpose_of_Account__c</fullName>
        <description>This field pertains to purpose of the credit account, if any found on the applicants CBR</description>
        <inlineHelpText>Tradelines- Purpose of Account (e.g. CRC)</inlineHelpText>
        <label>Purpose of Account</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Status_Date__c</fullName>
        <description>Integration field used to pull and load CBR</description>
        <label>Status Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <description>Integration field used to pull and load CBR</description>
        <label>Status</label>
        <picklist>
            <picklistValues>
                <fullName>Open</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Closed</fullName>
            </picklistValues>
            <restrictedPicklist>true</restrictedPicklist>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Subcode__c</fullName>
        <description>Integration field used to pull and load CBR</description>
        <label>Subcode</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Term_Type__c</fullName>
        <description>This field pertains creditor&apos;s type of term against the collections, If any found on the applicants CBR</description>
        <inlineHelpText>Collections Term (e.g. CLOSED/COLLECTION)</inlineHelpText>
        <label>Term Type</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <label>Credit Bureau Line Item</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>CBRL-{00000000}</displayFormat>
        <label>Credit Bureau Line Item No.</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Credit Bureau Line Items</pluralLabel>
    <recordTypes>
        <fullName>Default</fullName>
        <active>true</active>
        <label>Default</label>
    </recordTypes>
    <recordTypes>
        <fullName>New_Read_Only</fullName>
        <active>true</active>
        <label>Read Only</label>
    </recordTypes>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>